Boton "Añadir al carrito" y botones de Colores ahora se les cambia el cursor cuando lo ponen encima.

--- a/index.css
+++ b/index.css
@@ -63,6 +63,7 @@ body{
     width: 15px;
     height: 15px;
     border-radius: 5vh;
+    cursor: pointer;
 }
 
 .card_color1{
@@ -100,4 +101,5 @@ body{
     border: none;
     border-radius: 1vh;
     padding: 7px 6px;
+    cursor: pointer;
 }
